[gd_scene load_steps=35 format=3 uid="uid://dgxd2kwwi6tl8"]

[ext_resource type="Script" uid="uid://dt4phjectrhdt" path="res://scripts/main_box.gd" id="1_68iro"]
[ext_resource type="Script" uid="uid://q2hb4lnranhq" path="res://scripts/ui.gd" id="2_eh4tv"]
[ext_resource type="Script" uid="uid://2s1d0o5mj4gt" path="res://scripts/renderer.gd" id="2_kre7u"]
[ext_resource type="Texture2D" uid="uid://bsj4aah6mdvba" path="res://resources/ui_textures/selection.png" id="4_5gf5c"]
[ext_resource type="Texture2D" uid="uid://cmhjx1wxjowjr" path="res://resources/ui_textures/large_selection.png" id="5_lx4cx"]
[ext_resource type="Texture2D" uid="uid://bek1xrt5oocbd" path="res://resources/ui_textures/place_one_particle.png" id="6_ho4ic"]
[ext_resource type="Texture2D" uid="uid://b452evheghadt" path="res://resources/ui_textures/place_multiple_particles.png" id="7_htkke"]
[ext_resource type="Theme" uid="uid://dtscl0pgc5nc3" path="res://resources/thermalbox_theme.tres" id="8_ho4ic"]
[ext_resource type="Texture2D" uid="uid://bm0irqeu6rdxm" path="res://resources/button_textures/pause_icon.png" id="9_26wp7"]
[ext_resource type="Texture2D" uid="uid://bmlhepxmk7l6m" path="res://resources/button_textures/reset_icon.png" id="9_htkke"]
[ext_resource type="Texture2D" uid="uid://caatr43raeoi7" path="res://resources/button_textures/trash_icon.png" id="11_pasa8"]
[ext_resource type="FontFile" uid="uid://bkmjyxxq0ry83" path="res://resources/Chakra_Petch/ChakraPetch-SemiBold.ttf" id="12_2bu0j"]
[ext_resource type="Texture2D" uid="uid://ctbdvu4lt18oq" path="res://resources/button_textures/exit_icon.png" id="12_3u1n1"]
[ext_resource type="Texture2D" uid="uid://c1b2deu6vq3bw" path="res://resources/particle_textures/hi_res_particle.png" id="14_6wg2y"]
[ext_resource type="Texture2D" uid="uid://e04n3ndpco30" path="res://resources/button_textures/mouse_1.png" id="14_c7y5h"]
[ext_resource type="Texture2D" uid="uid://xjfyuyr6s5gu" path="res://resources/button_textures/mouse_2.png" id="16_gh5yq"]
[ext_resource type="Texture2D" uid="uid://ixp2pu05yr6e" path="res://resources/particle_textures/delete_particle.png" id="16_k7p17"]
[ext_resource type="Theme" uid="uid://q2l26guwlu6x" path="res://resources/item_theme.tres" id="18_ibswx"]
[ext_resource type="Texture2D" uid="uid://b4pe2ijf6ejka" path="res://resources/particle_textures/particle_1.png" id="19_qs4gm"]
[ext_resource type="Texture2D" uid="uid://bph7fk4fxnfu7" path="res://resources/particle_textures/particle_2.png" id="20_a5gih"]
[ext_resource type="Texture2D" uid="uid://bvv4q4x1l7a6y" path="res://resources/particle_textures/particle_3.png" id="21_keig0"]
[ext_resource type="Texture2D" uid="uid://baw1n4q0yj3ef" path="res://resources/particle_textures/particle_4.png" id="22_cj4yx"]
[ext_resource type="Texture2D" uid="uid://be1qkglmt0umf" path="res://resources/particle_textures/particle_5.png" id="23_lnd0k"]
[ext_resource type="Texture2D" uid="uid://c81hsd6ff00fx" path="res://resources/item_textures/wall_neutral.png" id="24_07dgy"]
[ext_resource type="Texture2D" uid="uid://devdprvm0jnhl" path="res://resources/item_textures/wall_cold.png" id="25_6rygk"]
[ext_resource type="Texture2D" uid="uid://d0etoy4rpqw2p" path="res://resources/item_textures/wall_hot.png" id="26_bbfrb"]
[ext_resource type="Texture2D" uid="uid://cc25v4y56vtsk" path="res://resources/item_textures/conductor_color.png" id="27_iu0o7"]
[ext_resource type="Texture2D" uid="uid://dykc2efd2pjcd" path="res://resources/item_textures/pump_color.png" id="28_n0s0b"]
[ext_resource type="Texture2D" uid="uid://d08o4eqdmfcwj" path="res://resources/item_textures/diode_color.png" id="29_wjhfn"]
[ext_resource type="Texture2D" uid="uid://cdbtk1ci2lnxj" path="res://resources/item_textures/spawner_color.png" id="30_0lqvs"]
[ext_resource type="Texture2D" uid="uid://dlum8nkyxy8v8" path="res://resources/item_textures/drain_color.png" id="31_mikul"]
[ext_resource type="Texture2D" uid="uid://bs7chhpmiahvk" path="res://resources/item_textures/heat_color.png" id="32_x1lch"]
[ext_resource type="Texture2D" uid="uid://yhu03fshf4cd" path="res://resources/item_textures/cool_color.png" id="33_q3gxs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gh5yq"]
bg_color = Color(0.09803922, 0.09019608, 0.11764706, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[node name="UI" type="CanvasLayer"]
script = ExtResource("2_eh4tv")

[node name="ItemPlaceCoolDown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="MainBox" type="Node2D" parent="."]
script = ExtResource("1_68iro")

[node name="ParticleSpawnTimer" type="Timer" parent="MainBox"]
wait_time = 5.0
autostart = true

[node name="ParticleRenderer" type="Node2D" parent="MainBox"]
script = ExtResource("2_kre7u")

[node name="SimulationView" type="ColorRect" parent="MainBox/ParticleRenderer"]
z_index = 2
offset_left = -54.0
offset_top = -58.0
offset_right = -14.0
offset_bottom = -18.0
color = Color(0.06666667, 0.06666667, 0.07450981, 1)

[node name="SelectedCell" type="Sprite2D" parent="MainBox/ParticleRenderer"]
visible = false
z_index = 4
texture = ExtResource("4_5gf5c")

[node name="PreviousCell" type="Sprite2D" parent="MainBox/ParticleRenderer"]
visible = false
modulate = Color(0.5330367, 0.5330367, 0.5330367, 1)
z_index = 4
texture = ExtResource("4_5gf5c")

[node name="LargeSelection" type="Sprite2D" parent="MainBox/ParticleRenderer"]
visible = false
z_index = 4
texture = ExtResource("5_lx4cx")

[node name="ParticlePlacement" type="Sprite2D" parent="MainBox/ParticleRenderer"]
visible = false
z_index = 4
texture = ExtResource("6_ho4ic")

[node name="ParticlePlacementMany" type="Sprite2D" parent="MainBox/ParticleRenderer"]
visible = false
z_index = 4
texture = ExtResource("7_htkke")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SimulationViewArea" type="Control" parent="Control"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SimulationViewRect" type="ColorRect" parent="Control/SimulationViewArea"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.09803922, 0.09019608, 0.11764706, 1)

[node name="SimulationViewPos" type="Control" parent="Control/SimulationViewArea/SimulationViewRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.13725491, 0.11372549, 0.16078432, 1)

[node name="SideBar" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 200.0
grow_vertical = 2
mouse_filter = 2

[node name="MainControls" type="VBoxContainer" parent="Control/SideBar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="Pause" type="Button" parent="Control/SideBar/MainControls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
theme = ExtResource("8_ho4ic")
text = "Pause"
icon = ExtResource("9_26wp7")
alignment = 0
icon_alignment = 2

[node name="ParticlesReset" type="Button" parent="Control/SideBar/MainControls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
theme = ExtResource("8_ho4ic")
text = "Clear particles"
icon = ExtResource("11_pasa8")
alignment = 0
icon_alignment = 2

[node name="Reset" type="Button" parent="Control/SideBar/MainControls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
theme = ExtResource("8_ho4ic")
text = "Reset"
icon = ExtResource("9_htkke")
alignment = 0
icon_alignment = 2

[node name="Borders" type="CheckButton" parent="Control/SideBar/MainControls"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
focus_mode = 0
theme = ExtResource("8_ho4ic")
button_pressed = true
text = "Generate borders"

[node name="xEditContainer" type="HBoxContainer" parent="Control/SideBar/MainControls"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/SideBar/MainControls/xEditContainer"]
layout_mode = 2
theme = ExtResource("8_ho4ic")
text = "Size x: "

[node name="LineEditx" type="LineEdit" parent="Control/SideBar/MainControls/xEditContainer"]
layout_mode = 2
focus_mode = 1
theme = ExtResource("8_ho4ic")

[node name="yEditContainer" type="HBoxContainer" parent="Control/SideBar/MainControls"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/SideBar/MainControls/yEditContainer"]
layout_mode = 2
theme = ExtResource("8_ho4ic")
text = "Size y: "

[node name="LineEdity" type="LineEdit" parent="Control/SideBar/MainControls/yEditContainer"]
layout_mode = 2
focus_mode = 1
theme = ExtResource("8_ho4ic")

[node name="Label" type="Label" parent="Control/SideBar/MainControls"]
layout_mode = 2
theme = ExtResource("8_ho4ic")
text = "[Enter] to submit value"

[node name="MainControlBuffer" type="MarginContainer" parent="Control/SideBar/MainControls"]
layout_mode = 2
theme_override_constants/margin_top = 12

[node name="Simulation" type="Label" parent="Control/SideBar/MainControls"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("8_ho4ic")
theme_override_fonts/font = ExtResource("12_2bu0j")
text = "Simulation"

[node name="FPSLabel" type="Label" parent="Control/SideBar/MainControls"]
layout_mode = 2
theme = ExtResource("8_ho4ic")
text = "FPS: "

[node name="CountLabel" type="Label" parent="Control/SideBar/MainControls"]
layout_mode = 2
theme = ExtResource("8_ho4ic")
text = "Particle count:"

[node name="Gravity" type="CheckButton" parent="Control/SideBar/MainControls"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("8_ho4ic")
button_pressed = true
text = "Gravity"

[node name="Cooling" type="CheckButton" parent="Control/SideBar/MainControls"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("8_ho4ic")
text = "Global cooling"

[node name="MainControlBuffer2" type="MarginContainer" parent="Control/SideBar/MainControls"]
layout_mode = 2
theme_override_constants/margin_top = 12

[node name="Controls" type="Label" parent="Control/SideBar/MainControls"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("8_ho4ic")
theme_override_fonts/font = ExtResource("12_2bu0j")
text = "Controls"

[node name="KeySpace" type="Label" parent="Control/SideBar/MainControls"]
layout_mode = 2
theme = ExtResource("8_ho4ic")
text = "[Space] Pause / Resume"

[node name="KeyR" type="Label" parent="Control/SideBar/MainControls"]
layout_mode = 2
theme = ExtResource("8_ho4ic")
text = "[Q] Toggle big selection"

[node name="KeyE" type="Label" parent="Control/SideBar/MainControls"]
layout_mode = 2
theme = ExtResource("8_ho4ic")
text = "[E] Clear particles"

[node name="KeyG" type="Label" parent="Control/SideBar/MainControls"]
layout_mode = 2
theme = ExtResource("8_ho4ic")
text = "[G] Toggle gravity"

[node name="KeyC" type="Label" parent="Control/SideBar/MainControls"]
layout_mode = 2
theme = ExtResource("8_ho4ic")
text = "[C] Toggle cooling"

[node name="ExitContainer" type="MarginContainer" parent="Control/SideBar/MainControls"]
layout_mode = 2
size_flags_vertical = 10

[node name="Exit" type="Button" parent="Control/SideBar/MainControls/ExitContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
theme = ExtResource("8_ho4ic")
text = "Exit"
icon = ExtResource("12_3u1n1")
alignment = 0
icon_alignment = 2

[node name="BottomBar" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="Items" type="HBoxContainer" parent="Control/BottomBar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Selected" type="VBoxContainer" parent="Control/BottomBar/Items"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Control/BottomBar/Items/Selected"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("8_ho4ic")
theme_override_fonts/font = ExtResource("12_2bu0j")
text = "Selected"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/BottomBar/Items/Selected"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/BottomBar/Items/Selected/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="Control/BottomBar/Items/Selected/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Control/BottomBar/Items/Selected/HBoxContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gh5yq")

[node name="TextureRect" type="TextureRect" parent="Control/BottomBar/Items/Selected/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("14_6wg2y")

[node name="TextureRect" type="TextureRect" parent="Control/BottomBar/Items/Selected/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("14_c7y5h")
stretch_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/BottomBar/Items/Selected/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="Control/BottomBar/Items/Selected/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Control/BottomBar/Items/Selected/HBoxContainer/VBoxContainer2/MarginContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gh5yq")

[node name="TextureRect" type="TextureRect" parent="Control/BottomBar/Items/Selected/HBoxContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("16_k7p17")

[node name="TextureRect" type="TextureRect" parent="Control/BottomBar/Items/Selected/HBoxContainer/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("16_gh5yq")
stretch_mode = 2

[node name="PlaceMany" type="CheckButton" parent="Control/BottomBar/Items/Selected"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme = ExtResource("8_ho4ic")
text = "Big selection"

[node name="Particles" type="VBoxContainer" parent="Control/BottomBar/Items"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Control/BottomBar/Items/Particles"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("8_ho4ic")
theme_override_fonts/font = ExtResource("12_2bu0j")
text = "Particles"

[node name="GridContainer" type="GridContainer" parent="Control/BottomBar/Items/Particles"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 2

[node name="Particle1Item" type="Button" parent="Control/BottomBar/Items/Particles/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Hub"
icon = ExtResource("19_qs4gm")
alignment = 0
icon_alignment = 2

[node name="Particle2Item" type="Button" parent="Control/BottomBar/Items/Particles/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Leaf"
icon = ExtResource("20_a5gih")
alignment = 0
icon_alignment = 2

[node name="Particle3Item" type="Button" parent="Control/BottomBar/Items/Particles/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Agressor"
icon = ExtResource("21_keig0")
alignment = 0
icon_alignment = 2

[node name="Particle4Item" type="Button" parent="Control/BottomBar/Items/Particles/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Solvent"
icon = ExtResource("22_cj4yx")
alignment = 0
icon_alignment = 2

[node name="Particle5Item" type="Button" parent="Control/BottomBar/Items/Particles/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Catalyst"
icon = ExtResource("23_lnd0k")
alignment = 0
icon_alignment = 2

[node name="Walls" type="VBoxContainer" parent="Control/BottomBar/Items"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Control/BottomBar/Items/Walls"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("8_ho4ic")
theme_override_fonts/font = ExtResource("12_2bu0j")
text = "Walls"

[node name="GridContainer" type="GridContainer" parent="Control/BottomBar/Items/Walls"]
layout_mode = 2
columns = 2

[node name="WallNeutral" type="Button" parent="Control/BottomBar/Items/Walls/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Isolator"
icon = ExtResource("24_07dgy")
alignment = 0
icon_alignment = 2

[node name="WallCold" type="Button" parent="Control/BottomBar/Items/Walls/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Cold
"
icon = ExtResource("25_6rygk")
alignment = 0
icon_alignment = 2

[node name="WallHot" type="Button" parent="Control/BottomBar/Items/Walls/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Hot"
icon = ExtResource("26_bbfrb")
alignment = 0
icon_alignment = 2

[node name="Conductor" type="Button" parent="Control/BottomBar/Items/Walls/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Conductor
"
icon = ExtResource("27_iu0o7")
alignment = 0
icon_alignment = 2

[node name="Tools" type="VBoxContainer" parent="Control/BottomBar/Items"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Control/BottomBar/Items/Tools"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("8_ho4ic")
theme_override_fonts/font = ExtResource("12_2bu0j")
text = "Tools & other"

[node name="GridContainer" type="GridContainer" parent="Control/BottomBar/Items/Tools"]
layout_mode = 2
columns = 2

[node name="Pump" type="Button" parent="Control/BottomBar/Items/Tools/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Pump"
icon = ExtResource("28_n0s0b")
alignment = 0
icon_alignment = 2

[node name="Diode" type="Button" parent="Control/BottomBar/Items/Tools/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Diode"
icon = ExtResource("29_wjhfn")
alignment = 0
icon_alignment = 2

[node name="Spawner" type="Button" parent="Control/BottomBar/Items/Tools/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Spawner"
icon = ExtResource("30_0lqvs")
alignment = 0
icon_alignment = 2

[node name="Drain" type="Button" parent="Control/BottomBar/Items/Tools/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Drain"
icon = ExtResource("31_mikul")
alignment = 0
icon_alignment = 2

[node name="HeatUp" type="Button" parent="Control/BottomBar/Items/Tools/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Heat up"
icon = ExtResource("32_x1lch")
alignment = 0
icon_alignment = 2

[node name="CoolDown" type="Button" parent="Control/BottomBar/Items/Tools/GridContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("18_ibswx")
text = "Cool"
icon = ExtResource("33_q3gxs")
alignment = 0
icon_alignment = 2

[connection signal="timeout" from="ItemPlaceCoolDown" to="." method="_on_item_place_cool_down_timeout"]
[connection signal="timeout" from="MainBox/ParticleSpawnTimer" to="MainBox" method="_on_particle_spawn_timer_timeout"]
[connection signal="pressed" from="Control/SideBar/MainControls/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Control/SideBar/MainControls/ParticlesReset" to="." method="_on_particles_reset_pressed"]
[connection signal="pressed" from="Control/SideBar/MainControls/Reset" to="." method="_on_reset_pressed"]
[connection signal="toggled" from="Control/SideBar/MainControls/Borders" to="." method="_on_borders_toggled"]
[connection signal="text_submitted" from="Control/SideBar/MainControls/xEditContainer/LineEditx" to="." method="_on_line_editx_text_submitted"]
[connection signal="text_submitted" from="Control/SideBar/MainControls/yEditContainer/LineEdity" to="." method="_on_line_edity_text_submitted"]
[connection signal="toggled" from="Control/SideBar/MainControls/Gravity" to="." method="_on_gravity_toggled"]
[connection signal="toggled" from="Control/SideBar/MainControls/Cooling" to="." method="_on_cooling_toggled"]
[connection signal="toggled" from="Control/BottomBar/Items/Selected/PlaceMany" to="." method="_on_place_many_toggled"]
[connection signal="pressed" from="Control/BottomBar/Items/Particles/GridContainer/Particle1Item" to="." method="_on_particle_1_item_pressed"]
[connection signal="pressed" from="Control/BottomBar/Items/Particles/GridContainer/Particle2Item" to="." method="_on_particle_2_item_pressed"]
[connection signal="pressed" from="Control/BottomBar/Items/Particles/GridContainer/Particle3Item" to="." method="_on_particle_3_item_pressed"]
[connection signal="pressed" from="Control/BottomBar/Items/Particles/GridContainer/Particle4Item" to="." method="_on_particle_4_item_pressed"]
[connection signal="pressed" from="Control/BottomBar/Items/Particles/GridContainer/Particle5Item" to="." method="_on_particle_5_item_pressed"]
[connection signal="pressed" from="Control/BottomBar/Items/Walls/GridContainer/WallNeutral" to="." method="_on_wall_neutral_pressed"]
[connection signal="pressed" from="Control/BottomBar/Items/Walls/GridContainer/WallCold" to="." method="_on_wall_cold_pressed"]
[connection signal="pressed" from="Control/BottomBar/Items/Walls/GridContainer/WallHot" to="." method="_on_wall_hot_pressed"]
[connection signal="pressed" from="Control/BottomBar/Items/Walls/GridContainer/Conductor" to="." method="_on_conductor_pressed"]
[connection signal="pressed" from="Control/BottomBar/Items/Tools/GridContainer/Pump" to="." method="_on_pump_pressed"]
[connection signal="pressed" from="Control/BottomBar/Items/Tools/GridContainer/Diode" to="." method="_on_diode_pressed"]
[connection signal="pressed" from="Control/BottomBar/Items/Tools/GridContainer/Spawner" to="." method="_on_spawner_pressed"]
[connection signal="pressed" from="Control/BottomBar/Items/Tools/GridContainer/Drain" to="." method="_on_drain_pressed"]
[connection signal="pressed" from="Control/BottomBar/Items/Tools/GridContainer/HeatUp" to="." method="_on_heat_up_pressed"]
[connection signal="pressed" from="Control/BottomBar/Items/Tools/GridContainer/CoolDown" to="." method="_on_cool_down_pressed"]
